[package]
name = "fourmeme"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2", features = [
    "full",
    "rpc-client",
    "rpc-types-trace",
    "rpc-types-debug",
    "json-rpc",
    "node-bindings",
    "eip712",
] }
async-stream = "0.3.5"
eyre = "0.6.12"
clap = { version = "4.4", features = ["derive", "env"] }
burberry = { git = "https://github.com/tonyke-bot/burberry.git", rev = "7d180c344187926124da3dd7737e17934f077671" }
futures = "0.3.30"
revm = { version = "12", features = [
    "optional_balance_check",
    "serde",
    "optional_eip3607",
    "optional_no_base_fee",
    "optional_block_gas_limit",
] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
serde_json = { version = "1.0.96", features = ["unbounded_depth"] }
reqwest = { version = "0.12.3", features = ["json"] }
lru = "0.12.4"
tracing-subscriber = "0.3.18"
