[package]
name = "fourmeme"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2", features = ["full", "rpc-client" ] }
burberry = { git = "https://github.com/tonyke-bot/burberry.git", rev = "7d180c344187926124da3dd7737e17934f077671" }
clap = { version = "4.4", features = ["derive", "env"] }
eyre = "0.6.12"
lru = "0.12.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
